--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "make:vercel": "node scripts/make-vercel-json.js"
     "build": "next build",
     "start": "next start",
     "seed": "tsx scripts/seed.ts",
