--- a/package.json
+++ b/package.json
@@ -4,34 +4,24 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "make:vercel": "node scripts/make-vercel-json.js"
     "build": "next build",
     "start": "next start",
-    "seed": "tsx scripts/seed.ts",
-    "test": "vitest run"
+    "lint": "next lint",
+    "make:vercel": "node scripts/make-vercel-json.js"
   },
   "dependencies": {
-    "cheerio": "^1.0.0",
-    "csv-parse": "^5.5.6",
-    "fuse.js": "^7.0.0",
-    "lucide-react": "^0.460.0",
     "next": "14.2.5",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "tailwindcss": "3.4.7",
-    "better-sqlite3": "^9.6.0"
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@types/better-sqlite3": "^7.6.9",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.38",
-    "prettier": "^3.3.2",
-    "tsx": "^4.16.2",
-    "typescript": "5.4.5",
-    "vitest": "^1.6.0"
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "typescript": "^5.5.4"
   },
-  "engines": { "node": "20.x" }
+  "engines": {
+    "node": "20.x"
+  }
 }
+
