--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "14.2.5",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "csv-parse": "^5.5.6"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
