--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "csv-parse": "^5.5.6"
+    "csv-parse": "^5.5.6",
+    "cheerio": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
