--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "csv-parse": "^5.5.6",
-    "cheerio": "^1.0.0"
+    "cheerio": "^1.0.0-rc.12"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
