--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "sgb-mapas-app",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "private": true,
+  "type": "module",
+  "engines": { "node": "20.x" },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,22 +11,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "next": "14.2.5",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "csv-parse": "^5.5.6",
-    "cheerio": "^1.0.0-rc.12"
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@types/node": "^20.12.12",
+    "@types/node": "^20.14.11",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
-    "typescript": "^5.5.4",
-    "tailwindcss": "^3.4.10",
-    "postcss": "^8.4.41",
-    "autoprefixer": "^10.4.20"
-  },
-  "engines": {
-    "node": "20.x"
+    "typescript": "^5.5.4"
   }
 }
